# serializer version: 1
# name: test_[0 1 2-AI JK-0 0 0]
  'IWUOYLJ'
# ---
# name: test_[0 1 2-AI JK-0 0 1]
  'WUOYLIZ'
# ---
# name: test_[0 1 2-AI JK-0 0 2]
  'UOYLIML'
# ---
# name: test_[0 1 2-AI JK-0 1 0]
  'UVZJNGF'
# ---
# name: test_[0 1 2-AI JK-0 1 1]
  'VZJNGZY'
# ---
# name: test_[0 1 2-AI JK-0 1 2]
  'ZJNGZWV'
# ---
# name: test_[0 1 2-AI JK-0 2 0]
  'HSSDOVU'
# ---
# name: test_[0 1 2-AI JK-0 2 1]
  'SSDOVRQ'
# ---
# name: test_[0 1 2-AI JK-0 2 2]
  'SDOVRKA'
# ---
# name: test_[0 1 2-AI JK-1 0 0]
  'LIJFGPO'
# ---
# name: test_[0 1 2-AI JK-1 0 1]
  'IJFGPPO'
# ---
# name: test_[0 1 2-AI JK-1 0 2]
  'JFGPPJK'
# ---
# name: test_[0 1 2-AI JK-1 1 0]
  'MJSGEZY'
# ---
# name: test_[0 1 2-AI JK-1 1 1]
  'JSGEZTS'
# ---
# name: test_[0 1 2-AI JK-1 1 2]
  'SGEZTRQ'
# ---
# name: test_[0 1 2-AI JK-1 2 0]
  'RCRSVCB'
# ---
# name: test_[0 1 2-AI JK-1 2 1]
  'CRSVCML'
# ---
# name: test_[0 1 2-AI JK-1 2 2]
  'RSVCMUT'
# ---
# name: test_[0 1 2-AI JK-2 0 0]
  'WNBCWBI'
# ---
# name: test_[0 1 2-AI JK-2 0 1]
  'NBCWBDC'
# ---
# name: test_[0 1 2-AI JK-2 0 2]
  'BCWBDNM'
# ---
# name: test_[0 1 2-AI JK-2 1 0]
  'DYKHPJK'
# ---
# name: test_[0 1 2-AI JK-2 1 1]
  'YKHPJWV'
# ---
# name: test_[0 1 2-AI JK-2 1 2]
  'KHPJWGF'
# ---
# name: test_[0 1 2-AI JK-2 2 0]
  'TRJXGWV'
# ---
# name: test_[0 1 2-AI JK-2 2 1]
  'RJXGWPO'
# ---
# name: test_[0 1 2-AI JK-2 2 2]
  'JXGWPYX'
# ---
# name: test_[0 1 2-AI PU BM-0 0 0]
  'IWPOYLK'
# ---
# name: test_[0 1 2-AI PU BM-0 0 1]
  'WPOYLIZ'
# ---
# name: test_[0 1 2-AI PU BM-0 0 2]
  'POYLIBL'
# ---
# name: test_[0 1 2-AI PU BM-0 1 0]
  'PVZKNGF'
# ---
# name: test_[0 1 2-AI PU BM-0 1 1]
  'VZKNGZY'
# ---
# name: test_[0 1 2-AI PU BM-0 1 2]
  'ZKNGZWV'
# ---
# name: test_[0 1 2-AI PU BM-0 2 0]
  'HSSDOVP'
# ---
# name: test_[0 1 2-AI PU BM-0 2 1]
  'SSDOVRQ'
# ---
# name: test_[0 1 2-AI PU BM-0 2 2]
  'SDOVRJA'
# ---
# name: test_[0 1 2-AI PU BM-1 0 0]
  'LIKFGUO'
# ---
# name: test_[0 1 2-AI PU BM-1 0 1]
  'IKFGUUO'
# ---
# name: test_[0 1 2-AI PU BM-1 0 2]
  'KFGUUKJ'
# ---
# name: test_[0 1 2-AI PU BM-1 1 0]
  'BKSGEZY'
# ---
# name: test_[0 1 2-AI PU BM-1 1 1]
  'KSGEZTS'
# ---
# name: test_[0 1 2-AI PU BM-1 1 2]
  'SGEZTRQ'
# ---
# name: test_[0 1 2-AI PU BM-1 2 0]
  'RCRSVCM'
# ---
# name: test_[0 1 2-AI PU BM-1 2 1]
  'CRSVCBL'
# ---
# name: test_[0 1 2-AI PU BM-1 2 2]
  'RSVCBPT'
# ---
# name: test_[0 1 2-AI PU BM-2 0 0]
  'WNMCWMI'
# ---
# name: test_[0 1 2-AI PU BM-2 0 1]
  'NMCWMDC'
# ---
# name: test_[0 1 2-AI PU BM-2 0 2]
  'MCWMDNB'
# ---
# name: test_[0 1 2-AI PU BM-2 1 0]
  'DYJHUKJ'
# ---
# name: test_[0 1 2-AI PU BM-2 1 1]
  'YJHUKWV'
# ---
# name: test_[0 1 2-AI PU BM-2 1 2]
  'JHUKWGF'
# ---
# name: test_[0 1 2-AI PU BM-2 2 0]
  'TRKXGWV'
# ---
# name: test_[0 1 2-AI PU BM-2 2 1]
  'RKXGWUO'
# ---
# name: test_[0 1 2-AI PU BM-2 2 2]
  'KXGWUYX'
# ---
# name: test_[0 1 2-AI-0 0 0]
  'IWUOYLK'
# ---
# name: test_[0 1 2-AI-0 0 1]
  'WUOYLIZ'
# ---
# name: test_[0 1 2-AI-0 0 2]
  'UOYLIML'
# ---
# name: test_[0 1 2-AI-0 1 0]
  'UVZKNGF'
# ---
# name: test_[0 1 2-AI-0 1 1]
  'VZKNGZY'
# ---
# name: test_[0 1 2-AI-0 1 2]
  'ZKNGZWV'
# ---
# name: test_[0 1 2-AI-0 2 0]
  'HSSDOVU'
# ---
# name: test_[0 1 2-AI-0 2 1]
  'SSDOVRQ'
# ---
# name: test_[0 1 2-AI-0 2 2]
  'SDOVRJA'
# ---
# name: test_[0 1 2-AI-1 0 0]
  'LIKFGPO'
# ---
# name: test_[0 1 2-AI-1 0 1]
  'IKFGPPO'
# ---
# name: test_[0 1 2-AI-1 0 2]
  'KFGPPKJ'
# ---
# name: test_[0 1 2-AI-1 1 0]
  'MKSGEZY'
# ---
# name: test_[0 1 2-AI-1 1 1]
  'KSGEZTS'
# ---
# name: test_[0 1 2-AI-1 1 2]
  'SGEZTRQ'
# ---
# name: test_[0 1 2-AI-1 2 0]
  'RCRSVCB'
# ---
# name: test_[0 1 2-AI-1 2 1]
  'CRSVCML'
# ---
# name: test_[0 1 2-AI-1 2 2]
  'RSVCMUT'
# ---
# name: test_[0 1 2-AI-2 0 0]
  'WNBCWBI'
# ---
# name: test_[0 1 2-AI-2 0 1]
  'NBCWBDC'
# ---
# name: test_[0 1 2-AI-2 0 2]
  'BCWBDNM'
# ---
# name: test_[0 1 2-AI-2 1 0]
  'DYJHPKJ'
# ---
# name: test_[0 1 2-AI-2 1 1]
  'YJHPKWV'
# ---
# name: test_[0 1 2-AI-2 1 2]
  'JHPKWGF'
# ---
# name: test_[0 1 2-AI-2 2 0]
  'TRKXGWV'
# ---
# name: test_[0 1 2-AI-2 2 1]
  'RKXGWPO'
# ---
# name: test_[0 1 2-AI-2 2 2]
  'KXGWPYX'
# ---
# name: test_[0 1 2-JK-0 0 0]
  'IGJPQQJ'
# ---
# name: test_[0 1 2-JK-0 0 1]
  'GJPQQIZ'
# ---
# name: test_[0 1 2-JK-0 0 2]
  'JPQQIUL'
# ---
# name: test_[0 1 2-JK-0 1 0]
  'ZKQMCKF'
# ---
# name: test_[0 1 2-JK-0 1 1]
  'KQMCKYY'
# ---
# name: test_[0 1 2-JK-0 1 2]
  'QMCKYQV'
# ---
# name: test_[0 1 2-JK-0 2 0]
  'NBZOVRU'
# ---
# name: test_[0 1 2-JK-0 2 1]
  'BZOVRFQ'
# ---
# name: test_[0 1 2-JK-0 2 2]
  'ZOVRFBI'
# ---
# name: test_[0 1 2-JK-1 0 0]
  'WIQUPUO'
# ---
# name: test_[0 1 2-JK-1 0 1]
  'IQUPUBO'
# ---
# name: test_[0 1 2-JK-1 0 2]
  'QUPUBZK'
# ---
# name: test_[0 1 2-JK-1 1 0]
  'CPYDKRY'
# ---
# name: test_[0 1 2-JK-1 1 1]
  'PYDKRXS'
# ---
# name: test_[0 1 2-JK-1 1 2]
  'YDKRXLQ'
# ---
# name: test_[0 1 2-JK-1 2 0]
  'QODGQXB'
# ---
# name: test_[0 1 2-JK-1 2 1]
  'ODGQXQL'
# ---
# name: test_[0 1 2-JK-1 2 2]
  'DGQXQGT'
# ---
# name: test_[0 1 2-JK-2 0 0]
  'MGCHYGA'
# ---
# name: test_[0 1 2-JK-2 0 1]
  'GCHYGHC'
# ---
# name: test_[0 1 2-JK-2 0 2]
  'CHYGHUM'
# ---
# name: test_[0 1 2-JK-2 1 0]
  'SUMFCMK'
# ---
# name: test_[0 1 2-JK-2 1 1]
  'UMFCMYV'
# ---
# name: test_[0 1 2-JK-2 1 2]
  'MFCMYKF'
# ---
# name: test_[0 1 2-JK-2 2 0]
  'LMUOUJV'
# ---
# name: test_[0 1 2-JK-2 2 1]
  'MUOUJOO'
# ---
# name: test_[0 1 2-JK-2 2 2]
  'UOUJOSX'
# ---
# name: test_[0 2 1-AI JK-0 0 0]
  'WOQDBYX'
# ---
# name: test_[0 2 1-AI JK-0 0 1]
  'OQDBYLJ'
# ---
# name: test_[0 2 1-AI JK-0 0 2]
  'QDBYLCB'
# ---
# name: test_[0 2 1-AI JK-0 1 0]
  'MCKHETS'
# ---
# name: test_[0 2 1-AI JK-0 1 1]
  'CKHETLJ'
# ---
# name: test_[0 2 1-AI JK-0 1 2]
  'KHETLNM'
# ---
# name: test_[0 2 1-AI JK-0 2 0]
  'RCNZVNM'
# ---
# name: test_[0 2 1-AI JK-0 2 1]
  'CNZVNJK'
# ---
# name: test_[0 2 1-AI JK-0 2 2]
  'NZVNJDC'
# ---
# name: test_[0 2 1-AI JK-1 0 0]
  'KHBTIVU'
# ---
# name: test_[0 2 1-AI JK-1 0 1]
  'HBTIVML'
# ---
# name: test_[0 2 1-AI JK-1 0 2]
  'BTIVMIZ'
# ---
# name: test_[0 2 1-AI JK-1 1 0]
  'TQWIQRQ'
# ---
# name: test_[0 2 1-AI JK-1 1 1]
  'QWIQRML'
# ---
# name: test_[0 2 1-AI JK-1 1 2]
  'WIQRMKA'
# ---
# name: test_[0 2 1-AI JK-1 2 0]
  'ZRDUZRQ'
# ---
# name: test_[0 2 1-AI JK-1 2 1]
  'RDUZRUT'
# ---
# name: test_[0 2 1-AI JK-1 2 2]
  'DUZRUUT'
# ---
# name: test_[0 2 1-AI JK-2 0 0]
  'JQGRUIZ'
# ---
# name: test_[0 2 1-AI JK-2 0 1]
  'QGRUIVU'
# ---
# name: test_[0 2 1-AI JK-2 0 2]
  'GRUIVML'
# ---
# name: test_[0 2 1-AI JK-2 1 0]
  'ZDBOTNM'
# ---
# name: test_[0 2 1-AI JK-2 1 1]
  'DBOTNWV'
# ---
# name: test_[0 2 1-AI JK-2 1 2]
  'BOTNWUT'
# ---
# name: test_[0 2 1-AI JK-2 2 0]
  'QZWJVGF'
# ---
# name: test_[0 2 1-AI JK-2 2 1]
  'ZWJVGYX'
# ---
# name: test_[0 2 1-AI JK-2 2 2]
  'WJVGYLJ'
# ---
# name: test_[0 2 1-AI PU BM-0 0 0]
  'WOQDMYX'
# ---
# name: test_[0 2 1-AI PU BM-0 0 1]
  'OQDMYLK'
# ---
# name: test_[0 2 1-AI PU BM-0 0 2]
  'QDMYLCM'
# ---
# name: test_[0 2 1-AI PU BM-0 1 0]
  'BCJHETS'
# ---
# name: test_[0 2 1-AI PU BM-0 1 1]
  'CJHETLK'
# ---
# name: test_[0 2 1-AI PU BM-0 1 2]
  'JHETLNB'
# ---
# name: test_[0 2 1-AI PU BM-0 2 0]
  'RCNZVNB'
# ---
# name: test_[0 2 1-AI PU BM-0 2 1]
  'CNZVNKJ'
# ---
# name: test_[0 2 1-AI PU BM-0 2 2]
  'NZVNKDC'
# ---
# name: test_[0 2 1-AI PU BM-1 0 0]
  'JHMTIVP'
# ---
# name: test_[0 2 1-AI PU BM-1 0 1]
  'HMTIVBL'
# ---
# name: test_[0 2 1-AI PU BM-1 0 2]
  'MTIVBIZ'
# ---
# name: test_[0 2 1-AI PU BM-1 1 0]
  'TQWIQRQ'
# ---
# name: test_[0 2 1-AI PU BM-1 1 1]
  'QWIQRBL'
# ---
# name: test_[0 2 1-AI PU BM-1 1 2]
  'WIQRBJA'
# ---
# name: test_[0 2 1-AI PU BM-1 2 0]
  'ZRDPZRQ'
# ---
# name: test_[0 2 1-AI PU BM-1 2 1]
  'RDPZRPT'
# ---
# name: test_[0 2 1-AI PU BM-1 2 2]
  'DPZRPPT'
# ---
# name: test_[0 2 1-AI PU BM-2 0 0]
  'KQGRPIZ'
# ---
# name: test_[0 2 1-AI PU BM-2 0 1]
  'QGRPIVP'
# ---
# name: test_[0 2 1-AI PU BM-2 0 2]
  'GRPIVBL'
# ---
# name: test_[0 2 1-AI PU BM-2 1 0]
  'ZDMOTNB'
# ---
# name: test_[0 2 1-AI PU BM-2 1 1]
  'DMOTNWV'
# ---
# name: test_[0 2 1-AI PU BM-2 1 2]
  'MOTNWPT'
# ---
# name: test_[0 2 1-AI PU BM-2 2 0]
  'QZWKVGF'
# ---
# name: test_[0 2 1-AI PU BM-2 2 1]
  'ZWKVGYX'
# ---
# name: test_[0 2 1-AI PU BM-2 2 2]
  'WKVGYLK'
# ---
# name: test_[0 2 1-AI-0 0 0]
  'WOQDBYX'
# ---
# name: test_[0 2 1-AI-0 0 1]
  'OQDBYLK'
# ---
# name: test_[0 2 1-AI-0 0 2]
  'QDBYLCB'
# ---
# name: test_[0 2 1-AI-0 1 0]
  'MCJHETS'
# ---
# name: test_[0 2 1-AI-0 1 1]
  'CJHETLK'
# ---
# name: test_[0 2 1-AI-0 1 2]
  'JHETLNM'
# ---
# name: test_[0 2 1-AI-0 2 0]
  'RCNZVNM'
# ---
# name: test_[0 2 1-AI-0 2 1]
  'CNZVNKJ'
# ---
# name: test_[0 2 1-AI-0 2 2]
  'NZVNKDC'
# ---
# name: test_[0 2 1-AI-1 0 0]
  'JHBTIVU'
# ---
# name: test_[0 2 1-AI-1 0 1]
  'HBTIVML'
# ---
# name: test_[0 2 1-AI-1 0 2]
  'BTIVMIZ'
# ---
# name: test_[0 2 1-AI-1 1 0]
  'TQWIQRQ'
# ---
# name: test_[0 2 1-AI-1 1 1]
  'QWIQRML'
# ---
# name: test_[0 2 1-AI-1 1 2]
  'WIQRMJA'
# ---
# name: test_[0 2 1-AI-1 2 0]
  'ZRDUZRQ'
# ---
# name: test_[0 2 1-AI-1 2 1]
  'RDUZRUT'
# ---
# name: test_[0 2 1-AI-1 2 2]
  'DUZRUUT'
# ---
# name: test_[0 2 1-AI-2 0 0]
  'KQGRUIZ'
# ---
# name: test_[0 2 1-AI-2 0 1]
  'QGRUIVU'
# ---
# name: test_[0 2 1-AI-2 0 2]
  'GRUIVML'
# ---
# name: test_[0 2 1-AI-2 1 0]
  'ZDBOTNM'
# ---
# name: test_[0 2 1-AI-2 1 1]
  'DBOTNWV'
# ---
# name: test_[0 2 1-AI-2 1 2]
  'BOTNWUT'
# ---
# name: test_[0 2 1-AI-2 2 0]
  'QZWKVGF'
# ---
# name: test_[0 2 1-AI-2 2 1]
  'ZWKVGYX'
# ---
# name: test_[0 2 1-AI-2 2 2]
  'WKVGYLK'
# ---
# name: test_[0 2 1-JK-0 0 0]
  'VXOJTHX'
# ---
# name: test_[0 2 1-JK-0 0 1]
  'XOJTHFJ'
# ---
# name: test_[0 2 1-JK-0 0 2]
  'OJTHFSB'
# ---
# name: test_[0 2 1-JK-0 1 0]
  'VVRGOUS'
# ---
# name: test_[0 2 1-JK-0 1 1]
  'VRGOUBJ'
# ---
# name: test_[0 2 1-JK-0 1 2]
  'RGOUBZM'
# ---
# name: test_[0 2 1-JK-0 2 0]
  'UVKGDTM'
# ---
# name: test_[0 2 1-JK-0 2 1]
  'VKGDTPK'
# ---
# name: test_[0 2 1-JK-0 2 2]
  'KGDTPXC'
# ---
# name: test_[0 2 1-JK-1 0 0]
  'NYEHIQU'
# ---
# name: test_[0 2 1-JK-1 0 1]
  'YEHIQWL'
# ---
# name: test_[0 2 1-JK-1 0 2]
  'EHIQWIZ'
# ---
# name: test_[0 2 1-JK-1 1 0]
  'HBZIRSQ'
# ---
# name: test_[0 2 1-JK-1 1 1]
  'BZIRSTL'
# ---
# name: test_[0 2 1-JK-1 1 2]
  'ZIRSTTI'
# ---
# name: test_[0 2 1-JK-1 2 0]
  'OOWKNFQ'
# ---
# name: test_[0 2 1-JK-1 2 1]
  'OWKNFNT'
# ---
# name: test_[0 2 1-JK-1 2 2]
  'WKNFNNT'
# ---
# name: test_[0 2 1-JK-2 0 0]
  'DNOXOIZ'
# ---
# name: test_[0 2 1-JK-2 0 1]
  'NOXOITU'
# ---
# name: test_[0 2 1-JK-2 0 2]
  'OXOITPL'
# ---
# name: test_[0 2 1-JK-2 1 0]
  'FOMHFVM'
# ---
# name: test_[0 2 1-JK-2 1 1]
  'OMHFVBV'
# ---
# name: test_[0 2 1-JK-2 1 2]
  'MHFVBZT'
# ---
# name: test_[0 2 1-JK-2 2 0]
  'KEFOJWF'
# ---
# name: test_[0 2 1-JK-2 2 1]
  'EFOJWQX'
# ---
# name: test_[0 2 1-JK-2 2 2]
  'FOJWQVJ'
# ---
# name: test_[1 0 2-AI JK-0 0 0]
  'OZVJDGF'
# ---
# name: test_[1 0 2-AI JK-0 0 1]
  'ZVJDGCB'
# ---
# name: test_[1 0 2-AI JK-0 0 2]
  'VJDGCRQ'
# ---
# name: test_[1 0 2-AI JK-0 1 0]
  'HWRWZXW'
# ---
# name: test_[1 0 2-AI JK-0 1 1]
  'WRWZXIZ'
# ---
# name: test_[1 0 2-AI JK-0 1 2]
  'RWZXILJ'
# ---
# name: test_[1 0 2-AI JK-0 2 0]
  'FNCJMGF'
# ---
# name: test_[1 0 2-AI JK-0 2 1]
  'NCJMGDC'
# ---
# name: test_[1 0 2-AI JK-0 2 2]
  'CJMGDWV'
# ---
# name: test_[1 0 2-AI JK-1 0 0]
  'TFZKHML'
# ---
# name: test_[1 0 2-AI JK-1 0 1]
  'FZKHMPO'
# ---
# name: test_[1 0 2-AI JK-1 0 2]
  'ZKHMPVU'
# ---
# name: test_[1 0 2-AI JK-1 1 0]
  'XLZOFYX'
# ---
# name: test_[1 0 2-AI JK-1 1 1]
  'LZOFYBI'
# ---
# name: test_[1 0 2-AI JK-1 1 2]
  'ZOFYBRQ'
# ---
# name: test_[1 0 2-AI JK-1 2 0]
  'KHRPWKA'
# ---
# name: test_[1 0 2-AI JK-1 2 1]
  'HRPWKHG'
# ---
# name: test_[1 0 2-AI JK-1 2 2]
  'RPWKHZY'
# ---
# name: test_[1 0 2-AI JK-2 0 0]
  'GQTRVNM'
# ---
# name: test_[1 0 2-AI JK-2 0 1]
  'QTRVNXW'
# ---
# name: test_[1 0 2-AI JK-2 0 2]
  'TRVNXVU'
# ---
# name: test_[1 0 2-AI JK-2 1 0]
  'WOCDDSR'
# ---
# name: test_[1 0 2-AI JK-2 1 1]
  'OCDDSVU'
# ---
# name: test_[1 0 2-AI JK-2 1 2]
  'CDDSVCB'
# ---
# name: test_[1 0 2-AI JK-2 2 0]
  'LVZFTON'
# ---
# name: test_[1 0 2-AI JK-2 2 1]
  'VZFTOIZ'
# ---
# name: test_[1 0 2-AI JK-2 2 2]
  'ZFTOIXW'
# ---
# name: test_[1 0 2-AI PU BM-0 0 0]
  'OZVKDGF'
# ---
# name: test_[1 0 2-AI PU BM-0 0 1]
  'ZVKDGCM'
# ---
# name: test_[1 0 2-AI PU BM-0 0 2]
  'VKDGCRQ'
# ---
# name: test_[1 0 2-AI PU BM-0 1 0]
  'HWRWZXW'
# ---
# name: test_[1 0 2-AI PU BM-0 1 1]
  'WRWZXIZ'
# ---
# name: test_[1 0 2-AI PU BM-0 1 2]
  'RWZXILK'
# ---
# name: test_[1 0 2-AI PU BM-0 2 0]
  'FNCKBGF'
# ---
# name: test_[1 0 2-AI PU BM-0 2 1]
  'NCKBGDC'
# ---
# name: test_[1 0 2-AI PU BM-0 2 2]
  'CKBGDWV'
# ---
# name: test_[1 0 2-AI PU BM-1 0 0]
  'TFZJHBL'
# ---
# name: test_[1 0 2-AI PU BM-1 0 1]
  'FZJHBUO'
# ---
# name: test_[1 0 2-AI PU BM-1 0 2]
  'ZJHBUVP'
# ---
# name: test_[1 0 2-AI PU BM-1 1 0]
  'XLZOFYX'
# ---
# name: test_[1 0 2-AI PU BM-1 1 1]
  'LZOFYMI'
# ---
# name: test_[1 0 2-AI PU BM-1 1 2]
  'ZOFYMRQ'
# ---
# name: test_[1 0 2-AI PU BM-1 2 0]
  'JHRUWJA'
# ---
# name: test_[1 0 2-AI PU BM-1 2 1]
  'HRUWJHG'
# ---
# name: test_[1 0 2-AI PU BM-1 2 2]
  'RUWJHZY'
# ---
# name: test_[1 0 2-AI PU BM-2 0 0]
  'GQTRVNB'
# ---
# name: test_[1 0 2-AI PU BM-2 0 1]
  'QTRVNXW'
# ---
# name: test_[1 0 2-AI PU BM-2 0 2]
  'TRVNXVP'
# ---
# name: test_[1 0 2-AI PU BM-2 1 0]
  'WOCDDSR'
# ---
# name: test_[1 0 2-AI PU BM-2 1 1]
  'OCDDSVP'
# ---
# name: test_[1 0 2-AI PU BM-2 1 2]
  'CDDSVCM'
# ---
# name: test_[1 0 2-AI PU BM-2 2 0]
  'LVZFTON'
# ---
# name: test_[1 0 2-AI PU BM-2 2 1]
  'VZFTOIZ'
# ---
# name: test_[1 0 2-AI PU BM-2 2 2]
  'ZFTOIXW'
# ---
# name: test_[1 0 2-AI-0 0 0]
  'OZVKDGF'
# ---
# name: test_[1 0 2-AI-0 0 1]
  'ZVKDGCB'
# ---
# name: test_[1 0 2-AI-0 0 2]
  'VKDGCRQ'
# ---
# name: test_[1 0 2-AI-0 1 0]
  'HWRWZXW'
# ---
# name: test_[1 0 2-AI-0 1 1]
  'WRWZXIZ'
# ---
# name: test_[1 0 2-AI-0 1 2]
  'RWZXILK'
# ---
# name: test_[1 0 2-AI-0 2 0]
  'FNCKMGF'
# ---
# name: test_[1 0 2-AI-0 2 1]
  'NCKMGDC'
# ---
# name: test_[1 0 2-AI-0 2 2]
  'CKMGDWV'
# ---
# name: test_[1 0 2-AI-1 0 0]
  'TFZJHML'
# ---
# name: test_[1 0 2-AI-1 0 1]
  'FZJHMPO'
# ---
# name: test_[1 0 2-AI-1 0 2]
  'ZJHMPVU'
# ---
# name: test_[1 0 2-AI-1 1 0]
  'XLZOFYX'
# ---
# name: test_[1 0 2-AI-1 1 1]
  'LZOFYBI'
# ---
# name: test_[1 0 2-AI-1 1 2]
  'ZOFYBRQ'
# ---
# name: test_[1 0 2-AI-1 2 0]
  'JHRPWJA'
# ---
# name: test_[1 0 2-AI-1 2 1]
  'HRPWJHG'
# ---
# name: test_[1 0 2-AI-1 2 2]
  'RPWJHZY'
# ---
# name: test_[1 0 2-AI-2 0 0]
  'GQTRVNM'
# ---
# name: test_[1 0 2-AI-2 0 1]
  'QTRVNXW'
# ---
# name: test_[1 0 2-AI-2 0 2]
  'TRVNXVU'
# ---
# name: test_[1 0 2-AI-2 1 0]
  'WOCDDSR'
# ---
# name: test_[1 0 2-AI-2 1 1]
  'OCDDSVU'
# ---
# name: test_[1 0 2-AI-2 1 2]
  'CDDSVCB'
# ---
# name: test_[1 0 2-AI-2 2 0]
  'LVZFTON'
# ---
# name: test_[1 0 2-AI-2 2 1]
  'VZFTOIZ'
# ---
# name: test_[1 0 2-AI-2 2 2]
  'ZFTOIXW'
# ---
# name: test_[1 0 2-JK-0 0 0]
  'KSOOORF'
# ---
# name: test_[1 0 2-JK-0 0 1]
  'SOOOROB'
# ---
# name: test_[1 0 2-JK-0 0 2]
  'OOOROFQ'
# ---
# name: test_[1 0 2-JK-0 1 0]
  'QXLKRPW'
# ---
# name: test_[1 0 2-JK-0 1 1]
  'XLKRPIZ'
# ---
# name: test_[1 0 2-JK-0 1 2]
  'LKRPIBJ'
# ---
# name: test_[1 0 2-JK-0 2 0]
  'XGSMGDF'
# ---
# name: test_[1 0 2-JK-0 2 1]
  'GSMGDMC'
# ---
# name: test_[1 0 2-JK-0 2 2]
  'SMGDMUV'
# ---
# name: test_[1 0 2-JK-1 0 0]
  'HKNRTRL'
# ---
# name: test_[1 0 2-JK-1 0 1]
  'KNRTRDO'
# ---
# name: test_[1 0 2-JK-1 0 2]
  'NRTRDTU'
# ---
# name: test_[1 0 2-JK-1 1 0]
  'QKEJVOX'
# ---
# name: test_[1 0 2-JK-1 1 1]
  'KEJVOWA'
# ---
# name: test_[1 0 2-JK-1 1 2]
  'EJVOWHQ'
# ---
# name: test_[1 0 2-JK-1 2 0]
  'MQSCVYI'
# ---
# name: test_[1 0 2-JK-1 2 1]
  'QSCVYKG'
# ---
# name: test_[1 0 2-JK-1 2 2]
  'SCVYKQY'
# ---
# name: test_[1 0 2-JK-2 0 0]
  'WXNLMOM'
# ---
# name: test_[1 0 2-JK-2 0 1]
  'XNLMOCW'
# ---
# name: test_[1 0 2-JK-2 0 2]
  'NLMOCQU'
# ---
# name: test_[1 0 2-JK-2 1 0]
  'CNYPGOR'
# ---
# name: test_[1 0 2-JK-2 1 1]
  'NYPGOFU'
# ---
# name: test_[1 0 2-JK-2 1 2]
  'YPGOFFB'
# ---
# name: test_[1 0 2-JK-2 2 0]
  'SKDELXN'
# ---
# name: test_[1 0 2-JK-2 2 1]
  'KDELXIZ'
# ---
# name: test_[1 0 2-JK-2 2 2]
  'DELXIWW'
# ---
# name: test_[1 2 0-AI JK-0 0 0]
  'RUDZZTS'
# ---
# name: test_[1 2 0-AI JK-0 0 1]
  'UDZZTML'
# ---
# name: test_[1 2 0-AI JK-0 0 2]
  'DZZTMKA'
# ---
# name: test_[1 2 0-AI JK-0 1 0]
  'UCKHDBI'
# ---
# name: test_[1 2 0-AI JK-0 1 1]
  'CKHDBSR'
# ---
# name: test_[1 2 0-AI JK-0 1 2]
  'KHDBSJK'
# ---
# name: test_[1 2 0-AI JK-0 2 0]
  'WOQLBZY'
# ---
# name: test_[1 2 0-AI JK-0 2 1]
  'OQLBZFE'
# ---
# name: test_[1 2 0-AI JK-0 2 2]
  'QLBZFCB'
# ---
# name: test_[1 2 0-AI JK-1 0 0]
  'JCGYJUT'
# ---
# name: test_[1 2 0-AI JK-1 0 1]
  'CGYJUGF'
# ---
# name: test_[1 2 0-AI JK-1 0 2]
  'GYJUGVU'
# ---
# name: test_[1 2 0-AI JK-1 1 0]
  'TIDBJVU'
# ---
# name: test_[1 2 0-AI JK-1 1 1]
  'IDBJVGF'
# ---
# name: test_[1 2 0-AI JK-1 1 2]
  'DBJVGWV'
# ---
# name: test_[1 2 0-AI JK-1 2 0]
  'JSGCLZY'
# ---
# name: test_[1 2 0-AI JK-1 2 1]
  'SGCLZSR'
# ---
# name: test_[1 2 0-AI JK-1 2 2]
  'GCLZSFE'
# ---
# name: test_[1 2 0-AI JK-2 0 0]
  'BLXIFZY'
# ---
# name: test_[1 2 0-AI JK-2 0 1]
  'LXIFZJK'
# ---
# name: test_[1 2 0-AI JK-2 0 2]
  'XIFZJML'
# ---
# name: test_[1 2 0-AI JK-2 1 0]
  'TFWKHZY'
# ---
# name: test_[1 2 0-AI JK-2 1 1]
  'FWKHZKA'
# ---
# name: test_[1 2 0-AI JK-2 1 2]
  'WKHZKHG'
# ---
# name: test_[1 2 0-AI JK-2 2 0]
  'LIOFRKA'
# ---
# name: test_[1 2 0-AI JK-2 2 1]
  'IOFRKHG'
# ---
# name: test_[1 2 0-AI JK-2 2 2]
  'OFRKHML'
# ---
# name: test_[1 2 0-AI PU BM-0 0 0]
  'RPDZZTS'
# ---
# name: test_[1 2 0-AI PU BM-0 0 1]
  'PDZZTBL'
# ---
# name: test_[1 2 0-AI PU BM-0 0 2]
  'DZZTBJA'
# ---
# name: test_[1 2 0-AI PU BM-0 1 0]
  'PCJHDMI'
# ---
# name: test_[1 2 0-AI PU BM-0 1 1]
  'CJHDMSR'
# ---
# name: test_[1 2 0-AI PU BM-0 1 2]
  'JHDMSKJ'
# ---
# name: test_[1 2 0-AI PU BM-0 2 0]
  'WOQLMZY'
# ---
# name: test_[1 2 0-AI PU BM-0 2 1]
  'OQLMZFE'
# ---
# name: test_[1 2 0-AI PU BM-0 2 2]
  'QLMZFCM'
# ---
# name: test_[1 2 0-AI PU BM-1 0 0]
  'KCGYKPT'
# ---
# name: test_[1 2 0-AI PU BM-1 0 1]
  'CGYKPGF'
# ---
# name: test_[1 2 0-AI PU BM-1 0 2]
  'GYKPGVP'
# ---
# name: test_[1 2 0-AI PU BM-1 1 0]
  'TIDMKVP'
# ---
# name: test_[1 2 0-AI PU BM-1 1 1]
  'IDMKVGF'
# ---
# name: test_[1 2 0-AI PU BM-1 1 2]
  'DMKVGWV'
# ---
# name: test_[1 2 0-AI PU BM-1 2 0]
  'KSGCLZY'
# ---
# name: test_[1 2 0-AI PU BM-1 2 1]
  'SGCLZSR'
# ---
# name: test_[1 2 0-AI PU BM-1 2 2]
  'GCLZSFE'
# ---
# name: test_[1 2 0-AI PU BM-2 0 0]
  'MLXIFZY'
# ---
# name: test_[1 2 0-AI PU BM-2 0 1]
  'LXIFZKJ'
# ---
# name: test_[1 2 0-AI PU BM-2 0 2]
  'XIFZKBL'
# ---
# name: test_[1 2 0-AI PU BM-2 1 0]
  'TFWJHZY'
# ---
# name: test_[1 2 0-AI PU BM-2 1 1]
  'FWJHZJA'
# ---
# name: test_[1 2 0-AI PU BM-2 1 2]
  'WJHZJHG'
# ---
# name: test_[1 2 0-AI PU BM-2 2 0]
  'LIOFRJA'
# ---
# name: test_[1 2 0-AI PU BM-2 2 1]
  'IOFRJHG'
# ---
# name: test_[1 2 0-AI PU BM-2 2 2]
  'OFRJHBL'
# ---
# name: test_[1 2 0-AI-0 0 0]
  'RUDZZTS'
# ---
# name: test_[1 2 0-AI-0 0 1]
  'UDZZTML'
# ---
# name: test_[1 2 0-AI-0 0 2]
  'DZZTMJA'
# ---
# name: test_[1 2 0-AI-0 1 0]
  'UCJHDBI'
# ---
# name: test_[1 2 0-AI-0 1 1]
  'CJHDBSR'
# ---
# name: test_[1 2 0-AI-0 1 2]
  'JHDBSKJ'
# ---
# name: test_[1 2 0-AI-0 2 0]
  'WOQLBZY'
# ---
# name: test_[1 2 0-AI-0 2 1]
  'OQLBZFE'
# ---
# name: test_[1 2 0-AI-0 2 2]
  'QLBZFCB'
# ---
# name: test_[1 2 0-AI-1 0 0]
  'KCGYKUT'
# ---
# name: test_[1 2 0-AI-1 0 1]
  'CGYKUGF'
# ---
# name: test_[1 2 0-AI-1 0 2]
  'GYKUGVU'
# ---
# name: test_[1 2 0-AI-1 1 0]
  'TIDBKVU'
# ---
# name: test_[1 2 0-AI-1 1 1]
  'IDBKVGF'
# ---
# name: test_[1 2 0-AI-1 1 2]
  'DBKVGWV'
# ---
# name: test_[1 2 0-AI-1 2 0]
  'KSGCLZY'
# ---
# name: test_[1 2 0-AI-1 2 1]
  'SGCLZSR'
# ---
# name: test_[1 2 0-AI-1 2 2]
  'GCLZSFE'
# ---
# name: test_[1 2 0-AI-2 0 0]
  'BLXIFZY'
# ---
# name: test_[1 2 0-AI-2 0 1]
  'LXIFZKJ'
# ---
# name: test_[1 2 0-AI-2 0 2]
  'XIFZKML'
# ---
# name: test_[1 2 0-AI-2 1 0]
  'TFWJHZY'
# ---
# name: test_[1 2 0-AI-2 1 1]
  'FWJHZJA'
# ---
# name: test_[1 2 0-AI-2 1 2]
  'WJHZJHG'
# ---
# name: test_[1 2 0-AI-2 2 0]
  'LIOFRJA'
# ---
# name: test_[1 2 0-AI-2 2 1]
  'IOFRJHG'
# ---
# name: test_[1 2 0-AI-2 2 2]
  'OFRJHML'
# ---
# name: test_[1 2 0-JK-0 0 0]
  'ZFKKSFS'
# ---
# name: test_[1 2 0-JK-0 0 1]
  'FKKSFVL'
# ---
# name: test_[1 2 0-JK-0 0 2]
  'KKSFVNI'
# ---
# name: test_[1 2 0-JK-0 1 0]
  'FVOGVVA'
# ---
# name: test_[1 2 0-JK-0 1 1]
  'VOGVVHR'
# ---
# name: test_[1 2 0-JK-0 1 2]
  'OGVVHFK'
# ---
# name: test_[1 2 0-JK-0 2 0]
  'GCSYKHY'
# ---
# name: test_[1 2 0-JK-0 2 1]
  'CSYKHUE'
# ---
# name: test_[1 2 0-JK-0 2 2]
  'SYKHUQB'
# ---
# name: test_[1 2 0-JK-1 0 0]
  'XJNGSBT'
# ---
# name: test_[1 2 0-JK-1 0 1]
  'JNGSBZF'
# ---
# name: test_[1 2 0-JK-1 0 2]
  'NGSBZMU'
# ---
# name: test_[1 2 0-JK-1 1 0]
  'NIEMHFU'
# ---
# name: test_[1 2 0-JK-1 1 1]
  'IEMHFWF'
# ---
# name: test_[1 2 0-JK-1 1 2]
  'EMHFWJV'
# ---
# name: test_[1 2 0-JK-1 2 0]
  'XTENKGY'
# ---
# name: test_[1 2 0-JK-1 2 1]
  'TENKGWR'
# ---
# name: test_[1 2 0-JK-1 2 2]
  'ENKGWOE'
# ---
# name: test_[1 2 0-JK-2 0 0]
  'GHDIKXY'
# ---
# name: test_[1 2 0-JK-2 0 1]
  'HDIKXUK'
# ---
# name: test_[1 2 0-JK-2 0 2]
  'DIKXURL'
# ---
# name: test_[1 2 0-JK-2 1 0]
  'UWTWKNY'
# ---
# name: test_[1 2 0-JK-2 1 1]
  'WTWKNDI'
# ---
# name: test_[1 2 0-JK-2 1 2]
  'TWKNDPG'
# ---
# name: test_[1 2 0-JK-2 2 0]
  'YIPDDNI'
# ---
# name: test_[1 2 0-JK-2 2 1]
  'IPDDNXG'
# ---
# name: test_[1 2 0-JK-2 2 2]
  'PDDNXXL'
# ---
# name: test_[2 0 1-AI JK-0 0 0]
  'BJSGULJ'
# ---
# name: test_[2 0 1-AI JK-0 0 1]
  'JSGULKA'
# ---
# name: test_[2 0 1-AI JK-0 0 2]
  'SGULKHG'
# ---
# name: test_[2 0 1-AI JK-0 1 0]
  'SMZETED'
# ---
# name: test_[2 0 1-AI JK-0 1 1]
  'MZETEWV'
# ---
# name: test_[2 0 1-AI JK-0 1 2]
  'ZETEWYX'
# ---
# name: test_[2 0 1-AI JK-0 2 0]
  'ZRZMBLJ'
# ---
# name: test_[2 0 1-AI JK-0 2 1]
  'RZMBLYX'
# ---
# name: test_[2 0 1-AI JK-0 2 2]
  'ZMBLYED'
# ---
# name: test_[2 0 1-AI JK-1 0 0]
  'GYRNLVU'
# ---
# name: test_[2 0 1-AI JK-1 0 1]
  'YRNLVON'
# ---
# name: test_[2 0 1-AI JK-1 0 2]
  'RNLVOFE'
# ---
# name: test_[2 0 1-AI JK-1 1 0]
  'PMPIXED'
# ---
# name: test_[2 0 1-AI JK-1 1 1]
  'MPIXEON'
# ---
# name: test_[2 0 1-AI JK-1 1 2]
  'PIXEOBI'
# ---
# name: test_[2 0 1-AI JK-1 2 0]
  'HBDMNUT'
# ---
# name: test_[2 0 1-AI JK-1 2 1]
  'BDMNUNM'
# ---
# name: test_[2 0 1-AI JK-1 2 2]
  'DMNUNED'
# ---
# name: test_[2 0 1-AI JK-2 0 0]
  'LPRFRPO'
# ---
# name: test_[2 0 1-AI JK-2 0 1]
  'PRFRPVU'
# ---
# name: test_[2 0 1-AI JK-2 0 2]
  'RFRPVJK'
# ---
# name: test_[2 0 1-AI JK-2 1 0]
  'GNCXOML'
# ---
# name: test_[2 0 1-AI JK-2 1 1]
  'NCXOMDC'
# ---
# name: test_[2 0 1-AI JK-2 1 2]
  'CXOMDIZ'
# ---
# name: test_[2 0 1-AI JK-2 2 0]
  'GBCYQKA'
# ---
# name: test_[2 0 1-AI JK-2 2 1]
  'BCYQKHG'
# ---
# name: test_[2 0 1-AI JK-2 2 2]
  'CYQKHPO'
# ---
# name: test_[2 0 1-AI PU BM-0 0 0]
  'MKSGPLK'
# ---
# name: test_[2 0 1-AI PU BM-0 0 1]
  'KSGPLJA'
# ---
# name: test_[2 0 1-AI PU BM-0 0 2]
  'SGPLJHG'
# ---
# name: test_[2 0 1-AI PU BM-0 1 0]
  'SBZETED'
# ---
# name: test_[2 0 1-AI PU BM-0 1 1]
  'BZETEWV'
# ---
# name: test_[2 0 1-AI PU BM-0 1 2]
  'ZETEWYX'
# ---
# name: test_[2 0 1-AI PU BM-0 2 0]
  'ZRZBMLK'
# ---
# name: test_[2 0 1-AI PU BM-0 2 1]
  'RZBMLYX'
# ---
# name: test_[2 0 1-AI PU BM-0 2 2]
  'ZBMLYED'
# ---
# name: test_[2 0 1-AI PU BM-1 0 0]
  'GYRNLVP'
# ---
# name: test_[2 0 1-AI PU BM-1 0 1]
  'YRNLVON'
# ---
# name: test_[2 0 1-AI PU BM-1 0 2]
  'RNLVOFE'
# ---
# name: test_[2 0 1-AI PU BM-1 1 0]
  'UBUIXED'
# ---
# name: test_[2 0 1-AI PU BM-1 1 1]
  'BUIXEON'
# ---
# name: test_[2 0 1-AI PU BM-1 1 2]
  'UIXEOMI'
# ---
# name: test_[2 0 1-AI PU BM-1 2 0]
  'HMDBNPT'
# ---
# name: test_[2 0 1-AI PU BM-1 2 1]
  'MDBNPNB'
# ---
# name: test_[2 0 1-AI PU BM-1 2 2]
  'DBNPNED'
# ---
# name: test_[2 0 1-AI PU BM-2 0 0]
  'LURFRUO'
# ---
# name: test_[2 0 1-AI PU BM-2 0 1]
  'URFRUVP'
# ---
# name: test_[2 0 1-AI PU BM-2 0 2]
  'RFRUVKJ'
# ---
# name: test_[2 0 1-AI PU BM-2 1 0]
  'GNCXOBL'
# ---
# name: test_[2 0 1-AI PU BM-2 1 1]
  'NCXOBDC'
# ---
# name: test_[2 0 1-AI PU BM-2 1 2]
  'CXOBDIZ'
# ---
# name: test_[2 0 1-AI PU BM-2 2 0]
  'GMCYQJA'
# ---
# name: test_[2 0 1-AI PU BM-2 2 1]
  'MCYQJHG'
# ---
# name: test_[2 0 1-AI PU BM-2 2 2]
  'CYQJHUO'
# ---
# name: test_[2 0 1-AI-0 0 0]
  'BKSGULK'
# ---
# name: test_[2 0 1-AI-0 0 1]
  'KSGULJA'
# ---
# name: test_[2 0 1-AI-0 0 2]
  'SGULJHG'
# ---
# name: test_[2 0 1-AI-0 1 0]
  'SMZETED'
# ---
# name: test_[2 0 1-AI-0 1 1]
  'MZETEWV'
# ---
# name: test_[2 0 1-AI-0 1 2]
  'ZETEWYX'
# ---
# name: test_[2 0 1-AI-0 2 0]
  'ZRZMBLK'
# ---
# name: test_[2 0 1-AI-0 2 1]
  'RZMBLYX'
# ---
# name: test_[2 0 1-AI-0 2 2]
  'ZMBLYED'
# ---
# name: test_[2 0 1-AI-1 0 0]
  'GYRNLVU'
# ---
# name: test_[2 0 1-AI-1 0 1]
  'YRNLVON'
# ---
# name: test_[2 0 1-AI-1 0 2]
  'RNLVOFE'
# ---
# name: test_[2 0 1-AI-1 1 0]
  'PMPIXED'
# ---
# name: test_[2 0 1-AI-1 1 1]
  'MPIXEON'
# ---
# name: test_[2 0 1-AI-1 1 2]
  'PIXEOBI'
# ---
# name: test_[2 0 1-AI-1 2 0]
  'HBDMNUT'
# ---
# name: test_[2 0 1-AI-1 2 1]
  'BDMNUNM'
# ---
# name: test_[2 0 1-AI-1 2 2]
  'DMNUNED'
# ---
# name: test_[2 0 1-AI-2 0 0]
  'LPRFRPO'
# ---
# name: test_[2 0 1-AI-2 0 1]
  'PRFRPVU'
# ---
# name: test_[2 0 1-AI-2 0 2]
  'RFRPVKJ'
# ---
# name: test_[2 0 1-AI-2 1 0]
  'GNCXOML'
# ---
# name: test_[2 0 1-AI-2 1 1]
  'NCXOMDC'
# ---
# name: test_[2 0 1-AI-2 1 2]
  'CXOMDIZ'
# ---
# name: test_[2 0 1-AI-2 2 0]
  'GBCYQJA'
# ---
# name: test_[2 0 1-AI-2 2 1]
  'BCYQJHG'
# ---
# name: test_[2 0 1-AI-2 2 2]
  'CYQJHPO'
# ---
# name: test_[2 0 1-JK-0 0 0]
  'FHEOVVJ'
# ---
# name: test_[2 0 1-JK-0 0 1]
  'HEOVVWI'
# ---
# name: test_[2 0 1-JK-0 0 2]
  'EOVVWPG'
# ---
# name: test_[2 0 1-JK-0 1 0]
  'YKMORJD'
# ---
# name: test_[2 0 1-JK-0 1 1]
  'KMORJTV'
# ---
# name: test_[2 0 1-JK-0 1 2]
  'MORJTEX'
# ---
# name: test_[2 0 1-JK-0 2 0]
  'XKBZJHJ'
# ---
# name: test_[2 0 1-JK-0 2 1]
  'KBZJHQX'
# ---
# name: test_[2 0 1-JK-0 2 2]
  'BZJHQOD'
# ---
# name: test_[2 0 1-JK-1 0 0]
  'NXCCYYU'
# ---
# name: test_[2 0 1-JK-1 0 1]
  'XCCYYCN'
# ---
# name: test_[2 0 1-JK-1 0 2]
  'CCYYCJE'
# ---
# name: test_[2 0 1-JK-1 1 0]
  'WLRITCD'
# ---
# name: test_[2 0 1-JK-1 1 1]
  'LRITCMN'
# ---
# name: test_[2 0 1-JK-1 1 2]
  'RITCMYA'
# ---
# name: test_[2 0 1-JK-1 2 0]
  'WXHUOFT'
# ---
# name: test_[2 0 1-JK-1 2 1]
  'XHUOFPM'
# ---
# name: test_[2 0 1-JK-1 2 2]
  'HUOFPBD'
# ---
# name: test_[2 0 1-JK-2 0 0]
  'WNXUDNO'
# ---
# name: test_[2 0 1-JK-2 0 1]
  'NXUDNSU'
# ---
# name: test_[2 0 1-JK-2 0 2]
  'XUDNSXK'
# ---
# name: test_[2 0 1-JK-2 1 0]
  'LTXUGLL'
# ---
# name: test_[2 0 1-JK-2 1 1]
  'TXUGLCC'
# ---
# name: test_[2 0 1-JK-2 1 2]
  'XUGLCIZ'
# ---
# name: test_[2 0 1-JK-2 2 0]
  'TJHCGYI'
# ---
# name: test_[2 0 1-JK-2 2 1]
  'JHCGYCG'
# ---
# name: test_[2 0 1-JK-2 2 2]
  'HCGYCJO'
# ---
# name: test_[2 1 0-AI JK-0 0 0]
  'JZGBZIZ'
# ---
# name: test_[2 1 0-AI JK-0 0 1]
  'ZGBZIJK'
# ---
# name: test_[2 1 0-AI JK-0 0 2]
  'GBZIJPO'
# ---
# name: test_[2 1 0-AI JK-0 1 0]
  'PFZSDON'
# ---
# name: test_[2 1 0-AI JK-0 1 1]
  'FZSDOZY'
# ---
# name: test_[2 1 0-AI JK-0 1 2]
  'ZSDOZBI'
# ---
# name: test_[2 1 0-AI JK-0 2 0]
  'LOQFRWV'
# ---
# name: test_[2 1 0-AI JK-0 2 1]
  'OQFRWIZ'
# ---
# name: test_[2 1 0-AI JK-0 2 2]
  'QFRWICB'
# ---
# name: test_[2 1 0-AI JK-1 0 0]
  'FKHZRML'
# ---
# name: test_[2 1 0-AI JK-1 0 1]
  'KHZRMRQ'
# ---
# name: test_[2 1 0-AI JK-1 0 2]
  'HZRMRWV'
# ---
# name: test_[2 1 0-AI JK-1 1 0]
  'NKHKHDC'
# ---
# name: test_[2 1 0-AI JK-1 1 1]
  'KHKHDQP'
# ---
# name: test_[2 1 0-AI JK-1 1 2]
  'HKHDQJK'
# ---
# name: test_[2 1 0-AI JK-1 2 0]
  'LPCFOPO'
# ---
# name: test_[2 1 0-AI JK-1 2 1]
  'PCFOPBI'
# ---
# name: test_[2 1 0-AI JK-1 2 2]
  'CFOPBSR'
# ---
# name: test_[2 1 0-AI JK-2 0 0]
  'FDUILKA'
# ---
# name: test_[2 1 0-AI JK-2 0 1]
  'DUILKHG'
# ---
# name: test_[2 1 0-AI JK-2 0 2]
  'UILKHFE'
# ---
# name: test_[2 1 0-AI JK-2 1 0]
  'TJLGQFE'
# ---
# name: test_[2 1 0-AI JK-2 1 1]
  'JLGQFQP'
# ---
# name: test_[2 1 0-AI JK-2 1 2]
  'LGQFQIZ'
# ---
# name: test_[2 1 0-AI JK-2 2 0]
  'CIFPJON'
# ---
# name: test_[2 1 0-AI JK-2 2 1]
  'IFPJOGF'
# ---
# name: test_[2 1 0-AI JK-2 2 2]
  'FPJOGKA'
# ---
# name: test_[2 1 0-AI PU BM-0 0 0]
  'KZGMZIZ'
# ---
# name: test_[2 1 0-AI PU BM-0 0 1]
  'ZGMZIKJ'
# ---
# name: test_[2 1 0-AI PU BM-0 0 2]
  'GMZIKUO'
# ---
# name: test_[2 1 0-AI PU BM-0 1 0]
  'UFZSDON'
# ---
# name: test_[2 1 0-AI PU BM-0 1 1]
  'FZSDOZY'
# ---
# name: test_[2 1 0-AI PU BM-0 1 2]
  'ZSDOZMI'
# ---
# name: test_[2 1 0-AI PU BM-0 2 0]
  'LOQFRWV'
# ---
# name: test_[2 1 0-AI PU BM-0 2 1]
  'OQFRWIZ'
# ---
# name: test_[2 1 0-AI PU BM-0 2 2]
  'QFRWICM'
# ---
# name: test_[2 1 0-AI PU BM-1 0 0]
  'FJHZRBL'
# ---
# name: test_[2 1 0-AI PU BM-1 0 1]
  'JHZRBRQ'
# ---
# name: test_[2 1 0-AI PU BM-1 0 2]
  'HZRBRWV'
# ---
# name: test_[2 1 0-AI PU BM-1 1 0]
  'NJHJHDC'
# ---
# name: test_[2 1 0-AI PU BM-1 1 1]
  'JHJHDQU'
# ---
# name: test_[2 1 0-AI PU BM-1 1 2]
  'HJHDQKJ'
# ---
# name: test_[2 1 0-AI PU BM-1 2 0]
  'LUCFOUO'
# ---
# name: test_[2 1 0-AI PU BM-1 2 1]
  'UCFOUMI'
# ---
# name: test_[2 1 0-AI PU BM-1 2 2]
  'CFOUMSR'
# ---
# name: test_[2 1 0-AI PU BM-2 0 0]
  'FDPILJA'
# ---
# name: test_[2 1 0-AI PU BM-2 0 1]
  'DPILJHG'
# ---
# name: test_[2 1 0-AI PU BM-2 0 2]
  'PILJHFE'
# ---
# name: test_[2 1 0-AI PU BM-2 1 0]
  'TKLGQFE'
# ---
# name: test_[2 1 0-AI PU BM-2 1 1]
  'KLGQFQU'
# ---
# name: test_[2 1 0-AI PU BM-2 1 2]
  'LGQFQIZ'
# ---
# name: test_[2 1 0-AI PU BM-2 2 0]
  'CIFUKON'
# ---
# name: test_[2 1 0-AI PU BM-2 2 1]
  'IFUKOGF'
# ---
# name: test_[2 1 0-AI PU BM-2 2 2]
  'FUKOGJA'
# ---
# name: test_[2 1 0-AI-0 0 0]
  'KZGBZIZ'
# ---
# name: test_[2 1 0-AI-0 0 1]
  'ZGBZIKJ'
# ---
# name: test_[2 1 0-AI-0 0 2]
  'GBZIKPO'
# ---
# name: test_[2 1 0-AI-0 1 0]
  'PFZSDON'
# ---
# name: test_[2 1 0-AI-0 1 1]
  'FZSDOZY'
# ---
# name: test_[2 1 0-AI-0 1 2]
  'ZSDOZBI'
# ---
# name: test_[2 1 0-AI-0 2 0]
  'LOQFRWV'
# ---
# name: test_[2 1 0-AI-0 2 1]
  'OQFRWIZ'
# ---
# name: test_[2 1 0-AI-0 2 2]
  'QFRWICB'
# ---
# name: test_[2 1 0-AI-1 0 0]
  'FJHZRML'
# ---
# name: test_[2 1 0-AI-1 0 1]
  'JHZRMRQ'
# ---
# name: test_[2 1 0-AI-1 0 2]
  'HZRMRWV'
# ---
# name: test_[2 1 0-AI-1 1 0]
  'NJHJHDC'
# ---
# name: test_[2 1 0-AI-1 1 1]
  'JHJHDQP'
# ---
# name: test_[2 1 0-AI-1 1 2]
  'HJHDQKJ'
# ---
# name: test_[2 1 0-AI-1 2 0]
  'LPCFOPO'
# ---
# name: test_[2 1 0-AI-1 2 1]
  'PCFOPBI'
# ---
# name: test_[2 1 0-AI-1 2 2]
  'CFOPBSR'
# ---
# name: test_[2 1 0-AI-2 0 0]
  'FDUILJA'
# ---
# name: test_[2 1 0-AI-2 0 1]
  'DUILJHG'
# ---
# name: test_[2 1 0-AI-2 0 2]
  'UILJHFE'
# ---
# name: test_[2 1 0-AI-2 1 0]
  'TKLGQFE'
# ---
# name: test_[2 1 0-AI-2 1 1]
  'KLGQFQP'
# ---
# name: test_[2 1 0-AI-2 1 2]
  'LGQFQIZ'
# ---
# name: test_[2 1 0-AI-2 2 0]
  'CIFPKON'
# ---
# name: test_[2 1 0-AI-2 2 1]
  'IFPKOGF'
# ---
# name: test_[2 1 0-AI-2 2 2]
  'FPKOGJA'
# ---
# name: test_[2 1 0-JK-0 0 0]
  'KFSKHIZ'
# ---
# name: test_[2 1 0-JK-0 0 1]
  'FSKHIVK'
# ---
# name: test_[2 1 0-JK-0 0 2]
  'SKHIVRO'
# ---
# name: test_[2 1 0-JK-0 1 0]
  'UKOUVKN'
# ---
# name: test_[2 1 0-JK-0 1 1]
  'KOUVKDY'
# ---
# name: test_[2 1 0-JK-0 1 2]
  'OUVKDFA'
# ---
# name: test_[2 1 0-JK-0 2 0]
  'XMSTMUV'
# ---
# name: test_[2 1 0-JK-0 2 1]
  'MSTMUIZ'
# ---
# name: test_[2 1 0-JK-0 2 2]
  'STMUIRB'
# ---
# name: test_[2 1 0-JK-1 0 0]
  'GDKMXDL'
# ---
# name: test_[2 1 0-JK-1 0 1]
  'DKMXDUQ'
# ---
# name: test_[2 1 0-JK-1 0 2]
  'KMXDURV'
# ---
# name: test_[2 1 0-JK-1 1 0]
  'UERNCWC'
# ---
# name: test_[2 1 0-JK-1 1 1]
  'ERNCWYP'
# ---
# name: test_[2 1 0-JK-1 1 2]
  'RNCWYLK'
# ---
# name: test_[2 1 0-JK-1 2 0]
  'TCPYGRO'
# ---
# name: test_[2 1 0-JK-1 2 1]
  'CPYGRRA'
# ---
# name: test_[2 1 0-JK-1 2 2]
  'PYGRRHR'
# ---
# name: test_[2 1 0-JK-2 0 0]
  'QBZIFDI'
# ---
# name: test_[2 1 0-JK-2 0 1]
  'BZIFDBG'
# ---
# name: test_[2 1 0-JK-2 0 2]
  'ZIFDBZE'
# ---
# name: test_[2 1 0-JK-2 1 0]
  'EYBZWBE'
# ---
# name: test_[2 1 0-JK-2 1 1]
  'YBZWBZP'
# ---
# name: test_[2 1 0-JK-2 1 2]
  'BZWBZIZ'
# ---
# name: test_[2 1 0-JK-2 2 0]
  'EIGRWTN'
# ---
# name: test_[2 1 0-JK-2 2 1]
  'IGRWTRF'
# ---
# name: test_[2 1 0-JK-2 2 2]
  'GRWTRDI'
# ---
